--- a/your-code/main_esp.ipynb
+++ b/your-code/main_esp.ipynb
@@ -12,17 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.stats import trim_mean, mode, skew, gaussian_kde, pearsonr, spearmanr, beta\n",
+    "import scipy.stats \n",
+    "from scipy.stats import trim_mean, mode, skew, gaussian_kde, pearsonr, spearmanr, beta, stats\n",
     "from statsmodels.stats.weightstats import ztest as ztest\n",
+    "import scipy\n",
     "\n",
-    "from scipy.stats import ttest_ind, norm, t\n",
+    "from scipy.stats import ttest_ind, norm, t, ttest_1samp\n",
     "from scipy.stats import f_oneway\n",
     "from scipy.stats import sem"
    ]
@@ -38,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code:\n",
-    "salaries = pd.read_csv('../Current_Employee_Names__Salaries__and_Position_Titles.csv')"
+    "salaries = pd.read_csv('/home/ubuntu/Ironhack_all/Ironhack_21thLab_A-B-testing/data/Current_Employee_Names__Salaries__and_Position_Titles.csv')"
    ]
   },
   {
@@ -55,11 +57,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "\n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
+       "\n",
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "salaries.head()"
    ]
   },
   {
@@ -73,11 +194,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 8022 entries, 4 to 33175\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Name               8022 non-null   object \n",
+      " 1   Job Titles         8022 non-null   object \n",
+      " 2   Department         8022 non-null   object \n",
+      " 3   Full or Part-Time  8022 non-null   object \n",
+      " 4   Salary or Hourly   8022 non-null   object \n",
+      " 5   Typical Hours      8022 non-null   float64\n",
+      " 6   Annual Salary      0 non-null      float64\n",
+      " 7   Hourly Rate        8022 non-null   float64\n",
+      "dtypes: float64(3), object(5)\n",
+      "memory usage: 564.0+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "#are there nulls?\n",
+    "\n",
+    "Only_hourly.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.6198057854942,4.3230240486229894e-92\n",
+      "rejecting null hypothesis, there IS difference between means\n"
+     ]
+    }
+   ],
+   "source": [
+    "population_mean = 30\n",
+    "\n",
+    "Only_hourly = salaries[salaries['Salary or Hourly']=='Hourly']\n",
+    "\n",
+    "stat, p_value = ttest_1samp(Only_hourly['Hourly Rate'], popmean=population_mean)\n",
+    "\n",
+    "print(f'{stat},{p_value}')\n",
+    "\n",
+    "\n",
+    "if p_value < 0.05:\n",
+    "    print('rejecting null hypothesis, there IS difference between means')\n",
+    "else:\n",
+    "    print('fail to reject null hypothesis, therefore, we accept it, there is no difference')\n"
    ]
   },
   {
@@ -99,11 +274,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.78855771628023\n",
+      "0.06649440689917112\n",
+      "33183\n",
+      "CI:(32.65822631954844, 32.91888911301202)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "Sample_mean = salaries['Hourly Rate'].mean()\n",
+    "Sample_std = salaries['Hourly Rate'].std()/np.sqrt(n-1)\n",
+    "n = len(salaries['Hourly Rate'])\n",
+    "\n",
+    "\n",
+    "CI = st.t.interval(0.95, df=n-1, loc=Sample_mean, scale=Sample_std)\n",
+    "\n",
+    "print(Sample_mean)\n",
+    "print(Sample_std)\n",
+    "print(len(salaries['Hourly Rate']))\n",
+    "print(f'CI:{CI}')"
    ]
   },
   {
@@ -121,11 +317,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "from statsmodels.stats.proportion import proportions_ztest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0004481127249057967\n",
+      "We reject the null hypothesis, there is difference\n"
+     ]
+    }
+   ],
+   "source": [
+    "Counts = Only_hourly['Name'].count()\n",
+    "Total_count = salaries['Name'].count()\n",
+    "\n",
+    "proprotion = 0.25\n",
+    "\n",
+    "stat,p_value = proportions_ztest(Counts,Total_count,proprotion)\n",
+    "\n",
+    "print(p_value)\n",
+    "print('We reject the null hypothesis, there is difference')"
    ]
   }
  ],
@@ -145,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
